--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "style-loader": "^1.0.0",
-    "webpack": "^4.39.1",
+    "webpack": "4.41.3",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.2.2"
